--- a/Input.css
+++ b/Input.css
@@ -168,7 +168,9 @@ margin-top : 22px;
 }
 #images {
 position : relative;
-    left : -200%;
+    left : -250%;
+    top : 90px;
+    
 
 }
 #optionsDsplay {
