--- a/animedit.css
+++ b/animedit.css
@@ -6,15 +6,18 @@
   border-style: inset;
   border-radius: 22px;
  
-  
+}
+#pgButtons{
+	position : relative;
+  top : -55px;
 }
 
 
 #logo_image {
   position : relative;
-  width : 23%;
+  width : 30%;
   left : 70%;
-  top : 50px;
+  top : 20px;
 }
 .hiddentext {
   display : none;
@@ -24,7 +27,7 @@
 #detail_fs_min {
   position : relative;
   border-style: outset;
-  top : -15%;
+  top : -45px;
   width : 95%;
   padding : 15px;
   height : auto;
@@ -45,7 +48,12 @@
   padding-left:0px;
   color: green;
 }
-
+.nothiddentext {
+  position : relative;
+  width : 100%;
+  font-size : 123%;
+  
+}
 .inputClass {
   position : relative;
   float : left;
@@ -61,13 +69,17 @@
 }
 
 .labelClass {
+  position : relative;
   width : auto;
+  float : left;
+  font-size : 120%;
+  text-decoration: underline;
 }
 #headingText {
   position : relative;
-  font-size: 22px;
+  font-size: 32px;
   left : 30%;
-  top : -30%;
+  top : -40px;
   
 }
 #imgDisplay {
@@ -77,10 +89,10 @@
   padding-left: 2px;
   padding-top: 3px;
   width : 120px;
-  max-height : 220px;
+  max-height : 170px;
   overflow: auto;
-  left : 70px;
-        		
+  left : -130px;
+  top : -70px;      		
 }
 .imgClass{
   	position : relative;
@@ -88,6 +100,20 @@
 	height : 100px;
   
 }
+#newtagslist{
+   position : relative;
+   top : -148px;
+  width : 10px;
+   left : 85%;
+   padding : 5px;
+  
+}
+.listitemC {
+  width : 170px;
+ padding-left : 2px; 
+  
+}
+
 
 .thumbpic {
 	position : relative;
@@ -102,12 +128,13 @@
 }
 #images {
   position : relative;
-  max-height : 200px;
+  height : 200px;
   border : 1px black solid;
   overflow : auto;
-  top : -253px;
-  left : 30px;
-  width : 870px;
+  top : -30px;
+  left : 3px;
+  width : 98%;
+  overflow-x:  hidden;
   
 }
 #oldImages {
@@ -117,11 +144,11 @@
 }
 
 #newImages {
-  position : relative;
-  top : -158px;
-  left : 69%;
-  width : 200px;
-  background-color: lightgrey;
+  position :absolute;
+  top : 5px;
+  left : 70% ;
+  width : 200px;;
+  
   
 }
 #oldTags {
@@ -132,10 +159,13 @@
 }
 #optionsDsplay{
   position : absolute;
-  top : 58px;
-  left : -90%;
+  top : 8px;
+  left : -180%;
   width : 200px;
   overflow :hidden;
   padding-left : 28px;
+  
     
 }
+
+
