--- a/minedit.css
+++ b/minedit.css
@@ -8,7 +8,13 @@
  
   
 }
-
+#newtagslist{
+   position : absolute;
+   top : 295px;
+   left : 70%;
+   padding : 5px;
+   background-color : lightgrey;
+}
 
 #logo_image {
   position : relative;
@@ -77,10 +83,10 @@
   padding-left: 2px;
   padding-top: 3px;
   width : 120px;
-  max-height : 220px;
+  max-height : 170px;
   overflow: auto;
-  left : 70px;
-        		
+  left : -130px;
+  top : -70px;      		
 }
 .imgClass{
   	position : relative;
@@ -102,12 +108,12 @@
 }
 #images {
   position : relative;
-  max-height : 200px;
+  height : 200px;
   border : 1px black solid;
   overflow : auto;
-  top : -289px;
-  left : 30px;
-  width : 870px;
+  top : 10px;
+  left : 3px;
+  width : 98%;
   
 }
 #oldImages {
@@ -117,10 +123,10 @@
 }
 
 #newImages {
-  position : relative;
-  top : -158px;
-  left : 69%;
-  width : 200px;
+  position :absolute;
+  top : 5px;
+  left : 70% ;
+  width : auto;
   background-color: lightgrey;
   
 }
@@ -132,8 +138,8 @@
 }
 #optionsDsplay{
   position : absolute;
-  top : 58px;
-  left : -90%;
+  top : 8px;
+  left : -130%;
   width : 200px;
   overflow :hidden;
   padding-left : 28px;
@@ -149,3 +155,7 @@
   width : 400px;
   
 }
+
+
+
+
