--- a/vegedit.css
+++ b/vegedit.css
@@ -20,6 +20,13 @@
   display : none;
   
 }
+#newtagslist{
+   position : absolute;
+   top : 295px;
+   left : 70%;
+   padding : 5px;
+   background-color : lightgrey;
+}
 
 #detail_fs_min {
   position : relative;
@@ -77,10 +84,10 @@
   padding-left: 2px;
   padding-top: 3px;
   width : 120px;
-  max-height : 220px;
+  max-height : 170px;
   overflow: auto;
-  left : 70px;
-        		
+  left : -130px;
+  top : -70px;      		
 }
 .imgClass{
   	position : relative;
@@ -102,12 +109,12 @@
 }
 #images {
   position : relative;
-  max-height : 200px;
+  height : 200px;
   border : 1px black solid;
   overflow : auto;
-  top : -233px;
-  width : 870px;
-  left : 30px;
+  top : 10px;
+  left : 3px;
+  width : 98%;
   
 }
 #oldImages {
@@ -117,10 +124,10 @@
 }
 
 #newImages {
-  position : relative;
-  top : -158px;
-  left : 69%;
-  width : 200px;
+  position :absolute;
+  top : 5px;
+  left : 70% ;
+  width : auto;
   background-color: lightgrey;
   
 }
@@ -132,10 +139,12 @@
 }
 #optionsDsplay{
   position : absolute;
-  top : 58px;
-  left : -70%;
+  top : 8px;
+  left : -130%;
   width : 200px;
   overflow :hidden;
+  padding-left : 28px;
   
     
 }
+
