--- a/IBIS_register.css
+++ b/IBIS_register.css
@@ -15,7 +15,7 @@
 	padding : 10px;
 }
 
-#imageBlock{
+#imgDisplay{
 position : absolute;
 top : 15px;
 left : 65%;
@@ -33,7 +33,8 @@ width : 90%;
 left : 2%;
 border-style : etched;
 }
-.thumb {
+.thumbpic {
+	border-radius : 12px;
   width : 250px;
   height : 250px;
   
