--- a/minedit.css
+++ b/minedit.css
@@ -6,21 +6,18 @@
   border-style: inset;
   border-radius: 22px;
  
-  
 }
-#newtagslist{
-   position : absolute;
-   top : 295px;
-   left : 70%;
-   padding : 5px;
-   background-color : lightgrey;
+#pgButtons{
+	position : relative;
+  top : -55px;
 }
+
 
 #logo_image {
   position : relative;
-  width : 23%;
+  width : 30%;
   left : 70%;
-  top : 50px;
+  top : 20px;
 }
 .hiddentext {
   display : none;
@@ -30,7 +27,7 @@
 #detail_fs_min {
   position : relative;
   border-style: outset;
-  top : -15%;
+  top : -45px;
   width : 95%;
   padding : 15px;
   height : auto;
@@ -51,7 +48,12 @@
   padding-left:0px;
   color: green;
 }
-
+.nothiddentext {
+  position : relative;
+  width : 100%;
+  font-size : 110%;
+  
+}
 .inputClass {
   position : relative;
   float : left;
@@ -67,13 +69,17 @@
 }
 
 .labelClass {
+  position : relative;
   width : auto;
+  float : left;
+  font-size : 120%;
+  text-decoration: underline;
 }
 #headingText {
   position : relative;
-  font-size: 22px;
+  font-size: 32px;
   left : 30%;
-  top : -30%;
+  top : -40px;
   
 }
 #imgDisplay {
@@ -94,6 +100,24 @@
 	height : 100px;
   
 }
+#newtagslist{
+   position : relative;
+   top : -230px;
+  width : auto;
+   left : 150%;
+   padding : 5px;
+  
+}
+#newtagslist input {
+  width : 300px;
+  
+}
+.listitemC {
+  width : 170px;
+ padding-left : 2px; 
+  
+}
+
 
 .thumbpic {
 	position : relative;
@@ -111,9 +135,10 @@
   height : 200px;
   border : 1px black solid;
   overflow : auto;
-  top : 10px;
+  top : -30px;
   left : 3px;
   width : 98%;
+  overflow-x:  hidden;
   
 }
 #oldImages {
@@ -125,37 +150,26 @@
 #newImages {
   position :absolute;
   top : 5px;
-  left : 70% ;
-  width : auto;
-  background-color: lightgrey;
+  left : 55% ;
+  width : 200px;;
+  
   
 }
 #oldTags {
-  position : absolute;
+  position : relative;
   left : 140px; 
-  top : 50px;
+  top : -110px;
   
 }
 #optionsDsplay{
   position : absolute;
   top : 8px;
-  left : -130%;
-  width : 200px;
+  left : -190%;
+  width : 180px;
   overflow :hidden;
   padding-left : 28px;
   
     
 }
-.checkC {
-  position : relative;
-  z-index: 12;
-  
-}
-.listitemC {
-  width : 400px;
-  
-}
-
-
 
 
