added dynamic heading to index page, fixed various other issues which tend to escape me right this moment, but  I must have been with something cause God knows I have been pounding away at this son of a bitch all bloody day, and it was such a nice day too :-(

--- a/searchform.css
+++ b/searchform.css
@@ -10,13 +10,12 @@
 }
 
 .cathead {
-position : relative;
-      font-size : 28px;
+position : absolute;
+      font-size : 250%;
       text-decoration : underline;
-  
-      left : 15%;
+   top : 220px;
+      left : 35%;
       z-index : 4;
-      top : 0px;
 }
 
 .selectList {
