--- a/animalia-table.css
+++ b/animalia-table.css
@@ -20,25 +20,19 @@
 
 .boxed:hover .note-and-attributes {
   
- position:fixed; top:2em;right:10px;z-index:3;
-  
- 
-  
- 
-    max-height:95%; 
-   display:block;
+ position:relative;
+ top:2em;
+  right:10px;
+  z-index:3;
+  max-height:95%; 
+  display:block;
   width : auto;
   color:black;
-  
-  background:#ffffff;
-  
+   background:#ffffff;
   font:normal 16px courier, sans-serif;
-  
   border:1px solid black;
-  
   padding:5px;
- 
-}
+ }
 
 .buttonclass {
   position : relative;
