--- a/details.css
+++ b/details.css
@@ -6,6 +6,24 @@
   border-style: inset;
     border-radius: 22px;
 }
+#dateTime {
+  position: relative;
+  top: 15px;
+  left: -70%;
+  z-index:3;
+  font-size: 18px;
+  margin-left:auto;
+  padding-left:10px;
+  color: green;
+  width: 30%;
+}
+.buttonclass {
+  border : 1px solid green;
+  font-size: 16px;
+  border-radius: 12px;
+  padding : 5px;
+  
+}
 #detail_fs {
   position : relative;
   border-style: outset;
