--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -52,10 +52,11 @@
 
 .optImage {
   position : relative;
-  width : 250px;
-  height : 150px;
+  width : 290px;
+  height : 180px;
   float : left;
   border-radius : 15px;
+  margin : 10px;
 }
 #greetingDiv{
 position : absolute;
@@ -134,6 +135,8 @@ color : blue;
  .findHeading {
    position : relative;
    width : 150px;  
+   left : 25%;
+   font-size : 238%;
 
 }
 .findOption:hover{
