--- a/vegedit.css
+++ b/vegedit.css
@@ -73,6 +73,14 @@
   left : 5%;
   
 }
+.labelclass{
+  position : relative;
+  font-size : 20px;
+  width : auto;
+  height : auto;
+  text-decoration : underline;
+  
+}
 .labelClass {
   position : relative;
   width : auto;
@@ -91,17 +99,17 @@
 	position : relative;
 	border : 1px black dashed;
   background-color : rgba(205,135, 12, 0.7);
-  padding-left: 2px;
+  padding: 2px;
   padding-top: 3px;
-  width : 120px;
+  width : 150px;
   max-height : 170px;
   overflow: auto;
-  left : -130px;
+  left : -170px;
   top : -70px;      		
 }
 .imgClass{
   	position : relative;
-	width : 50%;
+	width : 80%;
 	height : 50%;
   
   	border-radius:  15px;
@@ -127,14 +135,16 @@
 
 .thumbpic {
 	position : relative;
-	width : 100px;
+	width : 120px;
 	height : 100px;
+	border-radius: 12px;
 }
 .imgHolder {
   position : relative;
   width : 120px;
   max-height : 150px;
   overflow : auto;
+  overflow-y: scroll;
 }
 #images {
   position : relative;
@@ -151,7 +161,7 @@
   position : relative;
   top : 8px;
   padding-left : 12px;
-  width:  170px;
+  width:  200px;
 }
 
 #newImages {
@@ -169,12 +179,12 @@
   
 }
 #optionsDsplay{
-  position : absolute;
-  top : 8px;
-  left : -190%;
-  width : 190px;
+  position : relative;
+  top: -280px;
+  left : 100%;
+  width : auto;
   overflow :hidden;
-  padding-left : 28px;
+  padding-left : 18px;
   
     
 }
