--- a/animedit.css
+++ b/animedit.css
@@ -7,12 +7,25 @@
   border-radius: 22px;
  
 }
-#pgButtons{
-	position : relative;
-  top : -55px;
+#pgButtons {
+    position : relative;
+  
+    width: 500px;
+    top: -45px;
 }
 
-
+.buttonclass {
+  position : relative;
+   border-radius: 25px; 
+  border : green solid 1px;
+  height : auto;
+  width : auto;
+  font-size : 16px;
+  padding : 4px;
+  margin : 5px;
+  left : 0%;
+  
+}
 #logo_image {
   position : relative;
   width : 30%;
@@ -40,7 +53,7 @@
 
 #dateTime {
   position: fixed;
-  top: 12px;
+  top: 22px;
   left: 20px;
   z-index:3;
   font-size: 18px;
