--- a/vegedit.css
+++ b/vegedit.css
@@ -7,9 +7,23 @@
   border-radius: 22px;
  
 }
-#pgButtons{
-	position : relative;
-  top : -55px;
+#pgButtons {
+    position : relative;
+  
+    width: 500px;
+    top: -50px;
+}
+
+.buttonclass {
+  position : relative;
+   border-radius: 25px; 
+  border : green solid 1px;
+  height : auto;
+  width : auto;
+  font-size : 16px;
+  padding : 8px;
+  left : 0%;
+  
 }
 
 
