--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -242,6 +242,7 @@ color : blue;
   border-style: inset;
   border-radius: 22px; 
   
+  height: 90%;
 }
 #SFallContainer #logo_image_holder {
     position: relative;
@@ -319,10 +320,10 @@ position : absolute;
 #SFallContainer #theCategory {
   position : relative;
   padding : 10px;
- width : 122px;
+ width : 222px;
    border-style : dashed;
   border-width : 2px;
-  height : 170px;
+  max-height: 250px;
   margin-right: 10px;
   float : right;
    overflow-y : scroll;
@@ -386,9 +387,12 @@ position : relative;
   width : 115px;
   height : auto;
   top : 10%;
+  max-height: 350px;
 }
-#SFallContainer .img {
+#catPicsList img {
   cursor : pointer;
+  width : 200px;
+  height : 150px;
 }
 /*this is details.css
 it describes the detailspage*/
