--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -69,12 +69,23 @@ It describes the main page*/
   padding-right : 20px;
 }
 #greetingDiv{
-position : absolute;
+position : relative;
 font-size : 28px;
 left : 10%;
 color : blue; 
   width : 30%;
-  top : 180px;
+  top : ;
+}
+#regholder {
+  position : relative;
+}
+#regPic {
+  position : relative;
+  width : 150px;
+  height : 150px;
+  float : left;
+  top : -120px;
+  left : 40px;
 }
 
 #LinkList {
@@ -513,8 +524,9 @@ it describes the detailspage*/
 }
 #DETallContainer #catHeading {
   position : relative;
-  left : 10%;
+  left : 30%;
   font-size : 330%;
+  width: auto;
 }
 .italC {
   font-style : italic;
@@ -549,8 +561,8 @@ top : 10%;
   margin-top : 15px;
 }
 #DETallContainer .imgClass {
-  width : 120px;
-  height : 120px;
+  width : 150px;
+  height : 150px;
   
   border-radius: 12px;
   margin-left: 3px;
