cleared login inputs on refresh, removed alerts from animal input form and adjusted some styles

--- a/DataInput.css
+++ b/DataInput.css
@@ -71,9 +71,10 @@
 }
 #headingText{
  position : relative;
- font-size : 28px;
+ font-size : 38px;
  text-align : center;
    width : 300px;
+ left: 40%;
 }
 #headinglist {
 position : relative;
