--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -78,14 +78,17 @@ color : blue;
 }
 #regholder {
   position : relative;
+  width: auto;
+}
+#regpic {
+  position : absolute;
+width : auto;  
+  top: -120px;
 }
 #regPic {
   position : relative;
-  /*! width : 150px; */
-  height : 50px;
-  float : left;
-  /*! top : -120px; */
-  /*! left : 40px; */
+   width : 150px; 
+  height : 150px;
   font-size: 16px;
 }
 
