added ac class definition to maincss

--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -10,6 +10,9 @@ It describes the main page*/
   border-radius : 15px;
   left : 19px;
 }
+.ac(
+top : 10px;
+)
 .littleDD {
 	border-radius:35px;
 }
