--- a/animedit.css
+++ b/animedit.css
@@ -104,7 +104,7 @@
   width : 120px;
   max-height : 170px;
   overflow: auto;
-  left : -130px;
+  left : 90%;
   top : -70px;      		
 }
 .imgClass{
