--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -3,7 +3,7 @@ It describes the main page*/
 
 #MainallContainer {
   position : absolute;
-  width : 90vw;
+  width : 95vw;
   /*! height : 100vh; */
   padding : 20px;
   border-style: inset;
@@ -40,7 +40,7 @@ top : 10px;
   position : relative;
   border-style: outset;
   top : -18%;
-  width : 99%;
+  width : 95%;
   padding : 5px;
   height : 88%;
   border-radius : 25px;
@@ -63,11 +63,12 @@ top : 10px;
 
 .optImage {
   position : relative;
-  width : 150%;
+  max-width: 150%;
   max-height : 160px;
   float : left;
   border-radius : 15px;
-  padding-right : 20px;
+  padding: 6px;
+  width: 120%;
 }
 #greetingDiv{
 position : relative;
@@ -104,6 +105,8 @@ width : auto;
     border : green 2px dashed;
     float:right;
     top : 25px;
+    left: -8.5%;
+    padding: 10px;
 }
 
 #DidYouKnow {
@@ -128,17 +131,17 @@ width : auto;
     height:470px;
     text-align: center;
     text-decoration: underline;
-    border: red 1px dashed;
+    /*! border: red 1px dashed; */
     padding:2px;
     padding-bottom : 5px;
     padding-left : 20px;
-    top : -120px;
-   border-radius : 15px;
+    top : -60px;
+   /*! border-radius : 15px; */
 }
 
 .findOption {
     float: left;
-    margin-right: 12%;
+    margin-right: 5%;
     position: relative;
     }
 
@@ -179,9 +182,9 @@ width : auto;
   text-align : center;
   border: blue 1px dashed;
   padding:5px;
-  width : 18%;
+  width : 23.5%;
   top : 15px;
-  left : 75%;
+  left : 65%;
   text-align : center;
    border-radius : 15px;
   
@@ -189,17 +192,17 @@ width : auto;
 #registerBlock {
   position: relative;
   /*  float:left; */
-  width : 18%;
+  width : 23%;
   height : 12%;
   top : 10px;
  z-index : 8;
-  left : 75%;
+  left : 65%;
   font-size: 180%;
   text-decoration: underline;
   text-align : center;
   border: green 1px dashed;
   padding:10px;
-  padding-bottom : 5px;
+  /*! padding-bottom : 5px; */
   margin-bottom: 0px;
    border-radius : 15px;
 }
@@ -217,9 +220,10 @@ width : auto;
 }
 .H2 {
   position : relative;
-  left : 30%;
+  /*! left : 30%; */
   font-size : 28px;
   text-decoration : underline;
+  text-align: center;
 }
 #loginLink {
     position : absolute;
@@ -254,11 +258,18 @@ width : auto;
 
 /*this is searchForm.css*/
 #SFallContainer {
-  padding : 20px;
+ /* padding : 20px;
   border-style: inset;
   border-radius: 22px; 
   
-  height: 90%;
+  height: 90%;*/
+ position : absolute;
+  width : 95vw;
+  /*! height : 100vh; */
+  padding : 20px;
+  border-style: inset;
+  border-radius : 15px;
+  left : 19px;
 }
 #SFallContainer #logo_image_holder {
     position: relative;
