--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -48,7 +48,7 @@ top : 10px;
 
 #MainallContainer #dateTime {
   position: relative;
-  top: 15px;
+  /*! top: 15px; */
   left: -70%;
   z-index:3;
   font-size: 18px;
@@ -73,9 +73,8 @@ top : 10px;
 #greetingDiv{
 position : relative;
 font-size : 28px;
-left : 15%;
 color : blue; 
-  width : 30%;
+  /*! width : 30%; */
   top : ;
 }
 #regholder {
@@ -83,17 +82,19 @@ color : blue;
   width: auto;
 }
 #regpic {
-  position : absolute;
-width : auto;  
-  top: -120px;
+  position : relative;
+width : 60%;  
+  top: -0px;
+  padding: 5px;
 }
 #regPic {
   position : relative;
-   max-width: 14%; 
+   max-width: 44%; 
   /*! height : auto; */
   font-size: 16px;
   border-radius: 20px;
   top: 10px;
+  width: 320px;
 }
 
 #LinkList {
@@ -276,7 +277,7 @@ width : auto;
 
 #option3btn {
   position : relative;
-  /*! top : -70px; */
+  top : -0px;
   
 }
 #option2btn {
@@ -458,7 +459,7 @@ it describes the detailspage*/
   padding : 20px;
   border-style: inset;
     border-radius: 22px;
-  top: 10vh;
+  top: 1vh;
 }
 #DETallContainer #dateTime {
   position: relative;
@@ -792,4 +793,122 @@ it describes the Other functions page */
 .adminC {
   background-color : rgba(255, 255, 255, 0.6);
   color : black;
+}
+#viewsBlock {
+    position: relative;
+    border: black 1px solid;
+    border-radius: 20px;
+    padding: 15px;
+    width: 15vw;
+    font-size: 120%;
+    top: -60px;
+    left: 8px;
+}
+
+#ratingsBlock{
+      position: relative;
+    border: black 1px solid;
+    border-radius: 20px;
+    width: 16vw;
+  min-width:300px;
+    height: 100px;
+  top : -225px;
+  left :20%;
+  display :none;
+  overflow: auto;
+  padding: 30px;
+  padding-right : 0px;
+  
+}
+
+  
+#ratehead {
+  padding : 20%;
+  font-size : 130%;
+  text-decoration: underline;
+    
+  
+}
+#ratebut{
+  position : relative;
+  border: black 1px solid;
+    border-radius: 20px;
+    width: 16vw;
+  min-width:250px;
+    height: auto;
+  top : -230px;
+  left :20%;
+  font-size : 190%;
+  text-decoration: underline;
+  background-color: yellow;
+}
+.button:hover {
+  cursor: pointer;
+  background-color: blue;
+  
+}
+.button{
+  padding-left:20px;
+}
+#commentBlock {
+  position : relative;
+  border : 1px black solid;
+  border-radius : 25px;
+padding : 20px; 
+  width : 40%;
+  background-color: pink;
+  top : -270px;
+  left :38%;
+  display : none;
+  
+}
+#commentBlock label {
+  font-size : 120%;
+  
+}
+#welcBlock {
+  position : relative;
+   border : 1px black solid;
+  border-radius : 20px;
+  width : 24%;
+ left : 65%;
+  height : auto;
+  top : 5%;
+  padding : 10px;
+  
+  padding-top: 0px;
+}
+#currScore {
+  font-size : 300%;
+  
+}
+/*profile section*/
+#informDiv {
+  position : relative;
+  border : 2px black solid;
+  border-radius : 20px;
+  height : 80vh;
+  border-style : outset;
+  padding : 15px;
+}
+#nameSpan {
+  position : relative;
+  font-size : 350%;
+    
+  
+}
+#imageSpan img {
+  position : relative;
+  width : 20%;
+  float : right;
+  top : -60px;
+  
+}
+#scoreSpan {
+  position : relative;
+  font-size : 500%;
+  display : inline-block;
+}
+#infoDiv p {
+  font-size : 200%;
 }
